# engine.plotscri.pt

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  build.rs  demo.html  test-server.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  pr.yml  release.yml
examples/: adventure.ron  extension_demo.rs  interactive_fiction.rs  simple.pls  simple_adventure.ron  simple_adventure_fixed.ron  test_ron_direct.rs  test_ron_loading.rs  text_adventure.rs  visual_novel.rs
src/: error.rs  lib.rs  types.rs
src/engine/: commands.rs  engine_extensions.rs  formatter.rs  mod.rs  save.rs
src/extensions/: mod.rs
src/interactive_fiction/: mod.rs
src/io/: mod.rs
src/parser/: ast.rs  command_parser.rs  fuzzy.rs  grammar.pest  mod.rs  visitor.rs
src/runtime/: evaluator.rs  functions.rs  mod.rs
src/script/: mod.rs
src/scripting/: mod.rs
src/visual_novel/: mod.rs
src/wasm/: mod.rs
src/world/: graph.rs  mod.rs  query.rs  world_extensions.rs
templates/: interactive_fiction.ron  text_adventure.ron  visual_novel.ron
tests/: command_processing_tests.rs  dialogue_tests.rs  e2e_comprehensive_tests.rs  e2e_tests.rs  engine_tests.rs  error_handling_tests.rs  extension_tests.rs  interactive_fiction_tests.rs  parser_tests.rs  save_load_tests.rs  script_tests.rs  visual_novel_tests.rs  world_tests.rs
